--- a/NullaGroupHome/NullaGroupHome/NullaGroupHome.csproj
+++ b/NullaGroupHome/NullaGroupHome/NullaGroupHome.csproj
@@ -75,12 +75,22 @@
     <Content Include="About\Administrator\Figure\还有两年的高中狗.jpg" />
     <Content Include="About\Administrator\Introduction\PrimeBlade.aspx" />
     <Content Include="About\Contact.aspx" />
+    <Content Include="About\CSS\Menu.css" />
     <Content Include="About\Index.aspx" />
     <Content Include="About\Members.aspx" />
+    <Content Include="CSS\Icon.css" />
+    <Content Include="CSS\Text.css" />
     <Content Include="packages.config" />
-    <Content Include="Master.Master" />
     <Content Include="About\Master_About.master" />
     <Content Include="About\Administrator\Introduction\Master_Administrator.master" />
+    <Content Include="Product\CSS\Menu.css" />
+    <Content Include="Product\KeyCraft\Download.aspx" />
+    <Content Include="Product\KeyCraft\Images\Icon.jpg" />
+    <Content Include="Product\KeyCraft\Index.aspx" />
+    <Content Include="Footer.Master" />
+    <Content Include="Master.master" />
+    <Content Include="Product\KeyCraft\Master_KeyCraft.Master" />
+    <Content Include="Product\Master_Product.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -137,6 +147,13 @@
     <Compile Include="About\Members.aspx.designer.cs">
       <DependentUpon>Members.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Footer.Master.cs">
+      <DependentUpon>Footer.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Footer.Master.designer.cs">
+      <DependentUpon>Footer.Master</DependentUpon>
+    </Compile>
     <Compile Include="Helper\TitleHelper.cs" />
     <Compile Include="Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
@@ -145,12 +162,12 @@
     <Compile Include="Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Master.Master.cs">
-      <DependentUpon>Master.Master</DependentUpon>
+    <Compile Include="Master.master.cs">
+      <DependentUpon>Master.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Master.Master.designer.cs">
-      <DependentUpon>Master.Master</DependentUpon>
+    <Compile Include="Master.master.designer.cs">
+      <DependentUpon>Master.master</DependentUpon>
     </Compile>
     <Compile Include="Product\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
@@ -158,6 +175,34 @@
     </Compile>
     <Compile Include="Product\Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Product\KeyCraft\Download.aspx.cs">
+      <DependentUpon>Download.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Product\KeyCraft\Download.aspx.designer.cs">
+      <DependentUpon>Download.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Product\KeyCraft\Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Product\KeyCraft\Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Product\KeyCraft\Master_KeyCraft.Master.cs">
+      <DependentUpon>Master_KeyCraft.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Product\KeyCraft\Master_KeyCraft.Master.designer.cs">
+      <DependentUpon>Master_KeyCraft.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Product\Master_Product.Master.cs">
+      <DependentUpon>Master_Product.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Product\Master_Product.Master.designer.cs">
+      <DependentUpon>Master_Product.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
