--- a/NullaGroupHome/NullaGroupHome/NullaGroupHome.csproj
+++ b/NullaGroupHome/NullaGroupHome/NullaGroupHome.csproj
@@ -73,13 +73,7 @@
     <Content Include="About\Administrator\Figure\女仆长的PAD.jpg" />
     <Content Include="About\Administrator\Figure\小鸟小姐.jpg" />
     <Content Include="About\Administrator\Figure\还有两年的高中狗.jpg" />
-    <Content Include="About\Administrator\Introduction\Kotori.aspx" />
-    <Content Include="About\Administrator\Introduction\manageryzy.aspx" />
-    <Content Include="About\Administrator\Introduction\NavyFlash.aspx" />
     <Content Include="About\Administrator\Introduction\PrimeBlade.aspx" />
-    <Content Include="About\Administrator\Introduction\SalimTerryLi.aspx" />
-    <Content Include="About\Administrator\Introduction\Shedarshian.aspx" />
-    <Content Include="About\Administrator\Introduction\xfgryujk.aspx" />
     <Content Include="About\Contact.aspx" />
     <Content Include="About\CSS\Menu.css" />
     <Content Include="About\Index.aspx" />
@@ -89,15 +83,7 @@
     <Content Include="packages.config" />
     <Content Include="About\Master_About.master" />
     <Content Include="About\Administrator\Introduction\Master_Administrator.master" />
-    <Content Include="Product\BetterHUD\Download.aspx" />
-    <Content Include="Product\BetterHUD\Files\BetterHUD - 1.1.jar" />
-    <Content Include="Product\BetterHUD\Images\Icon.jpg" />
-    <Content Include="Product\BetterHUD\Index.aspx" />
-    <Content Include="Product\CSS\Download.css" />
     <Content Include="Product\CSS\Menu.css" />
-    <Content Include="Product\KeyCraft\1.7.10\Download.aspx" />
-    <Content Include="Product\KeyCraft\1.7.10\Files\KeyCraft - Demo 3.1.3β.jar" />
-    <Content Include="Product\KeyCraft\1.8.9\Download.aspx" />
     <Content Include="Product\KeyCraft\Download.aspx" />
     <Content Include="Product\KeyCraft\Images\Icon.jpg" />
     <Content Include="Product\KeyCraft\Index.aspx" />
@@ -105,7 +91,6 @@
     <Content Include="Master.master" />
     <Content Include="Product\KeyCraft\Master_KeyCraft.Master" />
     <Content Include="Product\Master_Product.Master" />
-    <Content Include="Product\BetterHUD\Master_BetterHUD.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -117,24 +102,9 @@
     <Content Include="Images\Nulla.jpg" />
     <Content Include="Index.aspx" />
     <Content Include="Product\Index.aspx" />
-    <Content Include="Product\Scripts\DownloadTable.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="About\Administrator\Introduction\Kotori.aspx.cs">
-      <DependentUpon>Kotori.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\Kotori.aspx.designer.cs">
-      <DependentUpon>Kotori.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\manageryzy.aspx.cs">
-      <DependentUpon>manageryzy.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\manageryzy.aspx.designer.cs">
-      <DependentUpon>manageryzy.aspx</DependentUpon>
-    </Compile>
     <Compile Include="About\Administrator\Introduction\Master_Administrator.master.cs">
       <DependentUpon>Master_Administrator.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -142,40 +112,12 @@
     <Compile Include="About\Administrator\Introduction\Master_Administrator.master.designer.cs">
       <DependentUpon>Master_Administrator.master</DependentUpon>
     </Compile>
-    <Compile Include="About\Administrator\Introduction\NavyFlash.aspx.cs">
-      <DependentUpon>NavyFlash.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\NavyFlash.aspx.designer.cs">
-      <DependentUpon>NavyFlash.aspx</DependentUpon>
-    </Compile>
     <Compile Include="About\Administrator\Introduction\PrimeBlade.aspx.cs">
       <DependentUpon>PrimeBlade.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="About\Administrator\Introduction\PrimeBlade.aspx.designer.cs">
       <DependentUpon>PrimeBlade.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\SalimTerryLi.aspx.cs">
-      <DependentUpon>SalimTerryLi.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\SalimTerryLi.aspx.designer.cs">
-      <DependentUpon>SalimTerryLi.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\Shedarshian.aspx.cs">
-      <DependentUpon>Shedarshian.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\Shedarshian.aspx.designer.cs">
-      <DependentUpon>Shedarshian.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\xfgryujk.aspx.cs">
-      <DependentUpon>xfgryujk.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="About\Administrator\Introduction\xfgryujk.aspx.designer.cs">
-      <DependentUpon>xfgryujk.aspx</DependentUpon>
     </Compile>
     <Compile Include="About\Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -227,47 +169,12 @@
     <Compile Include="Master.master.designer.cs">
       <DependentUpon>Master.master</DependentUpon>
     </Compile>
-    <Compile Include="Product\BetterHUD\Download.aspx.cs">
-      <DependentUpon>Download.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Product\BetterHUD\Download.aspx.designer.cs">
-      <DependentUpon>Download.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Product\BetterHUD\Index.aspx.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Product\BetterHUD\Index.aspx.designer.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Product\BetterHUD\Master_BetterHUD.Master.cs">
-      <DependentUpon>Master_BetterHUD.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Product\BetterHUD\Master_BetterHUD.Master.designer.cs">
-      <DependentUpon>Master_BetterHUD.Master</DependentUpon>
-    </Compile>
     <Compile Include="Product\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Product\Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Product\KeyCraft\1.7.10\Download.aspx.cs">
-      <DependentUpon>Download.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Product\KeyCraft\1.7.10\Download.aspx.designer.cs">
-      <DependentUpon>Download.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Product\KeyCraft\1.8.9\Download.aspx.cs">
-      <DependentUpon>Download.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Product\KeyCraft\1.8.9\Download.aspx.designer.cs">
-      <DependentUpon>Download.aspx</DependentUpon>
     </Compile>
     <Compile Include="Product\KeyCraft\Download.aspx.cs">
       <DependentUpon>Download.aspx</DependentUpon>
@@ -311,7 +218,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Product\KeyCraft\1.8.9\Files\" />
+    <Folder Include="Product\BetterHUD\" />
+    <Folder Include="Product\KeyCraft\1.7.10\" />
+    <Folder Include="Product\KeyCraft\1.8.9\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
